--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-"test" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<header>
+    <h1>User Profile</h1>
+</header>
+<main>
+    <section class="profile">
+        <div class="profile-picture">
+            <img src="profile-picture.jpg" alt="Profile Picture">
+        </div>
+        <div class="profile-info">
+            <h2>xiaofang xiao</h2>
+            <p>Email: 212786610@qq.com</p>
+            <p><a></a></p>
+            <p>Location: Shandong</p>
+            <p>Interests: Coding, Reading, Hiking</p>
+            <h3>School Information</h3>
+            <p>School: Shandong university</p>
+            <p>Grade: undergraduate student</p>
+        </div>
+    </section>
+</main>
+<footer>
+    <p>&copy; 2024 User Profile</p>
+</footer>
+</body>
+</html>
+
