--- a/index.html
+++ b/index.html
@@ -3,33 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>xiaofang xiao</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header>
-    <h1>User Profile</h1>
-</header>
-<main>
-    <section class="profile">
-        <div class="profile-picture">
-            <img src="profile-picture.jpg" alt="Profile Picture">
-        </div>
-        <div class="profile-info">
-            <h2>xiaofang xiao</h2>
-            <p>Email: 212786610@qq.com</p>
-            <p><a></a></p>
-            <p>Location: Shandong</p>
-            <p>Interests: Coding, Reading, Hiking</p>
-            <h3>School Information</h3>
-            <p>School: Shandong university</p>
-            <p>Grade: undergraduate student</p>
-        </div>
-    </section>
-</main>
-<footer>
-    <p>&copy; 2024 User Profile</p>
-</footer>
+
+<div class="container">
+    <div class="profile-header">
+        <img src="me.jpeg" alt="Profile Picture">
+        <h1>xiaofang xiao</h1>
+    </div>
+    <div class="profile-info">
+        <p><strong>Email:</strong> 212786610@qq.com</p>
+        <p><strong>Location:</strong> Shandong, China</p>
+        <p><strong>Occupation:</strong> undergraduate</p>
+        <p><strong>School:</strong> <a href="https://www.sc.sdu.edu.cn/">Shandong university</a></p>
+    </div>
+    <div class="profile-bio">
+        <h2>Bio</h2>
+        <p>Interests: Coding, Reading, Hiking</p>
+    </div>
+</div>
+
 </body>
 </html>
-
